--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '24.0.1'
+    buildToolsVersion '24.0.3'
     defaultConfig {
-        applicationId "ir.nazery.zekrshomar"
+        applicationId 'ir.nazery.zekrshomar'
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 22
         versionCode 2
         versionName "1.0"
     }
@@ -22,17 +22,22 @@ android {
 
 repositories {
     jcenter()
+    maven {
+        url "https://jitpack.io"
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:support-v4:24.0.0'
-    compile 'com.android.support:design:24.0.0'
-    compile 'com.android.support:cardview-v7:24.0.0'
-    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile files('libs/libSFG-1.1-release.jar')
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/hawk-1.23.jar')
-    compile files('libs/otto-1.3.8.jar')
+    compile project(':calligraphy-2.2.0')
+    compile project(':DataEgg')
+    compile project(':MaterialIntroView1.5.2')
 }
