--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ir.nazery.zekrshomar">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_plus_one_cyan_a700_48dp"
         android:label="@string/app_name"
+        android:name=".App"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -26,6 +29,8 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ir.nazery.zekrshomar.MainActivity" />
+        </activity>
+        <activity android:name=".AboutusActivity" >
         </activity>
     </application>
 
