--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,19 @@ android {
         applicationId 'ir.nazery.zekrshomar'
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.1.0"
     }
     buildTypes {
         release {
-            shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFile 'proguard-eventbus.pro'
+            proguardFile 'proguard-calligraphy.pro'
+            proguardFile 'proguard-activeandroid.pro'
+            proguardFile 'proguard-support-design.pro'
+            proguardFile 'proguard-support-v7-appcompat.pro'
+            proguardFile 'proguard-support-v7-cardview.pro'
         }
     }
     productFlavors {
