--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_plus_one_cyan_a700_48dp"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:name=".App"
         android:supportsRtl="true"
